# delta-search

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
delta_search/: __init__.py  ablation.py  adaptive_beam.py  anytime.py  beam.py  benchmarks.py  budget_metrics.py  cli.py  context_engineering.py  graph.py  hybrid_pipeline.py  incremental.py  interop.py  io.py  learned.py  multi_objective.py  multistart.py  problem.py  problems.py  progress.py  solver.py  streaming.py  test_time_compute.py  theory.py  utils.py  visualization.py
docs/: architecture.md  deployment.md  faq.md  getting-started.md
tests/: conftest.py  test_ablation_theory.py  test_applications.py  test_benchmarks.py  test_cli.py  test_graph.py  test_incremental.py  test_interop.py  test_io.py  test_multistart.py  test_new_solvers.py  test_problem.py  test_problems.py  test_progress.py  test_solver.py  test_utils.py  test_visualization.py
