[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delta-search"
version = "0.1.0"
description = "ΔSearch: A general heuristic framework for subgraph extraction problems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Sachin (sachn-cs)", email = "sachncs@gmail.com"},
]
maintainers = [
    {name = "Sachin (sachn-cs)", email = "sachncs@gmail.com"},
]
keywords = [
    "graph-theory",
    "subgraph-extraction",
    "np-hard",
    "heuristic-search",
    "combinatorial-optimization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.4.0",
    "pip-audit>=2.7.0",
]

[project.urls]
Homepage = "https://github.com/delta-search/delta-search"
Repository = "https://github.com/delta-search/delta-search"
"Bug Tracker" = "https://github.com/delta-search/delta-search/issues"
Documentation = "https://github.com/delta-search/delta-search#readme"
Changelog = "https://github.com/delta-search/delta-search/blob/main/CHANGELOG.md"
"arXiv" = "https://arxiv.org/abs/2606.13834"

[project.scripts]
delta-search = "delta_search.cli:main"

[tool.setuptools.packages.find]
include = ["delta_search*"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["delta_search"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "networkx"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["delta_search"]
branch = true

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
]
